<resources>
    <string name="app_name">menu</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="check_out">CHECK OUT</string>
    <string name="todo">TODO</string>
    <string name="password">Password</string>
    <string name="signup">Signup</string>
    <string name="already_have_an_accout_sign_in_here">Already have an accout? Sign In here.</string>
    <string name="signin">signin</string>
    <string name="create_accout_sign_up_here">create_accout_sign_up_here</string>
    <string name="sign_in_now">SIGN IN NOW</string>
    <string name="signup_done_signin_now">SIGNUP DONE SIGNIN NOW</string>
    <string name="hello">hello there</string>
    <string name="access_the_account_now">Access the Account Now</string>
    <string name="email">Email</string>
    <string name="profile">Profile</string>
    <string name="textview">TextView</string>
    <string name="food_name">Food Name</string>
    <string name="food_place">Food Place</string>
    <string name="price">Price</string>
    <string name="on">On</string>
    <string name="heat">Heat</string>
    <string name="energyctrl">Energyctrl</string>
    <string name="room_temp">room_temp</string>
    <string name="mode">Mode</string>
    <string name="jetmode">Jetmode</string>
    <string name="off">off</string>
    <string name="comfortair">Comfortair</string>
    <string name="lights_off">Lights off</string>
    <string name="func">func</string>
    <string name="timer">Timer</string>
    <string name="fanspeed">Fanspeed</string>
    <string name="cool">cool</string>
    <string name="callup">Callup</string>
    <string name="ac">AC IS ON</string>
    <string name="acof">Ac is off</string>
    <string name="n26">26</string>
    <string name="get_profile">Get Profile</string>
    <string name="room_no">Room No</string>
    <string name="menu">MENU</string>
    <string name="order_now">ORDER NOW</string>
    <string name="contact">CONTACT</string>
    <string name="email_to_organization">Email To Organization</string>
</resources>
