<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    >
    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/item_image"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="128dp"
            android:scaleType="centerCrop"
            android:src="@drawable/deserts"
            android:contentDescription="@string/todo" />
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:orientation="vertical">

            <TextView
                android:id="@+id/item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_name"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/item_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_place"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/item_price"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:background="@drawable/capsule"
            android:layout_height="30dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/price" />
    </LinearLayout>
</androidx.cardview.widget.CardView>